--- a/doc/commands.adoc
+++ b/doc/commands.adoc
@@ -503,7 +503,7 @@ Create `sensor` as a `kafka` data source:
 ----
 CREATE DATA SOURCE sensor TYPE kafka OPTIONS (
     brokers 'kafka:29092',
-    topics '^metadb_sensor_1.*',
+    topics '^metadb_sensor_1\.',
     consumergroup 'metadb_sensor_1_1',
     addschemaprefix 'sensor_',
     tablestopfilter 'testing\.air_temp,testing\.air_temp_avg'
